fix: menu spacing

--- a/src/components/Shared/Header/styles.module.css
+++ b/src/components/Shared/Header/styles.module.css
@@ -29,6 +29,7 @@
   cursor: pointer;
   display: flex;
   align-items: center;
+  padding: 0.75rem 1.75rem;
 }
 
 .nav ul li:hover {
